# chainlesschain

./: .claudeignore  .editorconfig  .env.cloud.example  .env.example  .eslintrc.js  .gitattributes  .gitignore  AGENTS.md  AI_CHAT_ENHANCEMENTS.md  AI_CONVERSATION_BUG_FIX_REPORT.md  AI_PIPELINE_OPTIMIZATION_PLAN.md  ALL_EDITORS_README.md  ANDROID_FEATURES_COMPLETE.md  ANDROID_FEATURES_LOCATION.md  AUDIT_2026-04-22.md  BACKEND_INTEGRATION_COMPLETE.md  BLOCKCHAIN_ADAPTER_PHASES_4-6_COMPLETE.md  BLOCKCHAIN_ADAPTER_TEST_SUMMARY.md  BLOCKCHAIN_INTEGRATION_PROGRESS.md  BUGFIX_UKEY.md  BUG_FIXES_PPT_AND_STREAMING.md  BUG_FIX_REPORT.md  CHANGELOG-v0.2.0.md  CHANGELOG.md  CLAUDE-activeContext.md  CLAUDE-decisions.md  CLAUDE-patterns.md  CLAUDE-troubleshooting.md  CLAUDE.local.md  CLAUDE.md  COMMIT_MESSAGE.txt  COMPLETE_DATA_REPORT.md  COMPLETE_FIX_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DATA_ENGINE_FIX_SUMMARY.md  DATA_IMPORT_REPORT.md  DATA_ISOLATION_IMPLEMENTATION.md  DEBUG_ISSUES.md  (+221 more)
.chainlesschain/: MCP_INTEGRATION_EVALUATION_REPORT.md  MCP_POC_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_PLAN_FROM_OPENCLAUDE.md  QUICK_REFERENCE.md  README.md  RULES_REVIEW_GUIDE.md  SQL_INJECTION_FIX_GUIDE.md  TEAM_TRAINING.md  config.json.example  mcp-config-example.json  rules.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: commit-msg  post-commit  pre-commit  pre-push
android-app/: .editorconfig  .env.example  .gitignore  ADB_TEST_GUIDE.md  ANDROID_BUG_FIX_PLAN.md  ANDROID_COMPLETE_INTEGRATION_PLAN.md  ANDROID_FIX_SUMMARY_2026-02-05.md  ANDROID_LLM_CONFIG_GUIDE.md  ANDROID_TESTING_REPORT.md  ANDROID_TESTS_COMPLETE_REPORT.md  BUILD_EXECUTION_LOG.md  BUILD_REQUIREMENTS.md  CHANGELOG.md  CI_CD_SETUP_COMPLETE.md  CLOUD_LLM_CONFIGURATION.md  CODE_REVIEW_AND_FIXES.md  COMPILATION_FIX_GUIDE.md  COMPILATION_FIX_REPORT.md  CRITICAL_FIXES_APPLIED.md  DAY1_COMPLETION_REPORT.md  DAY2_COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS_FINAL.md  DEVELOPMENT_PLAN_v0.31.0-v0.32.0.md  DIAGNOSTIC_UPDATE.md  DOCS_ORGANIZATION_SUMMARY.md  E2E_TESTING_GUIDE.md  E2E_TEST_COMPLETION_REPORT.md  E2E_UI_TESTS_SPECIFICATION.md  ENTRY_POINTS_CHECK_REPORT.md  ENTRY_VERIFICATION_REPORT.md  FEATURES_ACCESS_GUIDE.md  FEATURE_VERIFICATION_CHECKLIST.md  FILE_BROWSER_CRASH_DIAGNOSIS.md  FINAL_DELIVERY_SUMMARY.md  FINAL_FIX_REPORT_2026-02-05.md  FINAL_TESTS_COMPLETE.md  FINAL_VERIFICATION_CHECKLIST.md  FIXES_APPLIED_2026-01-27.md  FIXES_APPLIED_2026-02-05.md  (+81 more)
android-app/feature-ai/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
android-app/feature-local-terminal/src/main/cpp/: CMakeLists.txt  pty_jni.cpp  pty_jni_placeholder.cpp
assets/: README.md  loading_animation.html
backend/: API_DOCUMENTATION.md  build-standalone.bat  build-standalone.sh
browser-extension/: FEATURES.md  README.md  manifest.json  package-lock.json  package.json
changelog/: README.md
community-forum/: API_DOCUMENTATION.md  BACKEND_COMPLETE.md  BACKEND_IMPLEMENTATION_GUIDE.md  BACKEND_PROGRESS.md  DATABASE_SETUP.md  FEATURES.md  FIX_DATABASE.md  PROGRESS.md  README.md  RESTART_GUIDE.md  docker-compose.yml  start.bat  start.sh
config/: .env.example  README.md  jest.config.js  playwright.config.ts  vitest.config.js
data/: .gitkeep
deploy/: .env.production.example  PLUGIN_MARKETPLACE_DEPLOY.md  backup.sh  deploy-all.sh  deploy-docs.sh  deploy.sh  docs-deploy.config.sh.example  fix-bt-nginx-marketplace.sh  health-check.sh  init-marketplace-db.sh  restore.sh  setup-monitoring.sh
desktop-app/: README.md  TEST_GUIDE.md  package.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts
desktop-app-vue/: .env.blockchain.example  .env.example  .env.p2-development  .env.production.example  .gitignore  .npmrc  .prettierignore  ADD_CATEGORY_MENU.md  ADVANCED_FEATURES_GUIDE.md  ADVANCED_OPTIMIZATION_REPORT.md  API_FORMAT_FIX.md  APPLICATION_STARTUP_VERIFICATION.md  AUTO_TEST_REPORT.md  AUTO_UPDATE_GUIDE.md  BUGS_FIXED.md  BUG_FIX_REPORT_2025-12-28.md  CHANGELOG.md  CHANGELOG_PKCS11.md  CODE_SIGNING_GUIDE.md  COMPLETE_INTEGRATION_GUIDE.md  DATABASE_ADAPTER_TEST_FIX_SUMMARY.md  DATABASE_FIXES_SUMMARY.md  DEPLOYMENT_STATUS.md  E2E_TEST_WORK_SUMMARY.md  ERROR_FIX_GUIDE.md  EXECUTION_SUMMARY.md  EXTERNAL_DEVICE_FILE_FEATURE.md  FILE_IMPORT_IMPLEMENTATION.md  FINAL_CHECK_SUMMARY.md  FINAL_SUMMARY.md  FINAL_TEST_OPTIMIZATION_SUMMARY.md  FIRST_PHASE_PROGRESS.md  FIX-GUIDE.md  FIX-PROJECT-CREATION-ISSUES.md  FOLLOWUP_INTENT_INTEGRATION_GUIDE.md  FOLLOWUP_INTENT_TESTING_GUIDE.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_UI_INTEGRATION.md  GRAPH_MANUAL_TEST.md  GRAPH_TEST_SUMMARY.md  (+256 more)
dist-tools/: mastodon-nostr-v5.0.3.55.md  mastodon-nostr-v5.0.3.56.md  post-mastodon-thread-v5.0.3.56.sh  post-mastodon-thread.dry-run.txt  post-mastodon-thread.sh  release-notes-v5.0.3.55.md  twitter-thread-v5.0.3.55.md  twitter-thread-v5.0.3.56.md  weibo-post-v5.0.3.55.md  weibo-post-v5.0.3.56.md
docs-site/: .gitignore  BUILD_COMPLETE.md  DEPLOYMENT_GUIDE.md  DOCS_UPDATE_v0.17.0.md  DOCS_UPDATE_v0.27.0.md  PACKAGE_INFO.md  README.md  README_UPDATE.md  README_UPDATE_v0.27.0.md  UPDATE_SUMMARY.md  build-and-package.bat  build-and-package.sh  package-lock.json  package.json  quick-verify.bat  quick-verify.sh  update-docs-quick.bat  update-docs-quick.sh
docs-site-design/: .gitignore  debug-build.mjs  package-lock.json  package.json
docs-website/: CHANGELOG_STYLE_V2.md  COMPLETED_v0.21.0.md  COMPLETION_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOY_GUIDE.md  ENHANCEMENTS_PREVIEW.md  FINAL_ENHANCEMENTS_COMPLETE.md  FIXED_HEADER_UPDATE.md  HOTFIX_SUMMARY.md  MOBILE_OPTIMIZATION_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  QUICKFIX_HERO_BUTTON.md  QUICK_DEPLOY.txt  QUICK_OPTIMIZE.md  README.md  README_OPTIMIZATION.txt  build.js  (+39 more)
docs-website-v2/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+12342 files in other folders)
